kubernetes_hetzner/deployment-bk.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: jyldyz0610/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 443
