kubernetes_hetzner/deployment-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: jyldyz0610/database:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3306
