kubernetes_hetzner/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projectcms
  labels:
    app: projectcms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projectcms
  template:
    metadata:
      labels:
        app: projectcms
    spec:
      containers:
      - name: projectcms
        image: jyldyz0610/frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      restartPolicy: Always
