kubernetes_hetzner/service-bk.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app: backend
