kubernetes_hetzner/service.yml
apiVersion: v1
kind: Service
metadata:
  name: projectcms
  namespace: default
spec:
  selector:
    app: projectcms
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: projectcms
    protocol: TCP
    port: 443
    targetPort: 3000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
