kubernetes_hetzner/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms-frontend
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    Access-Control-Allow-Origin: https://start.devops-knowledge.de

spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - start.devops-knowledge.de
      secretName: wildcards-tls
  rules:
  - host: start.devops-knowledge.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: projectcms
            port:
              number: 443
